guardar antes de reinicio

--- a/index.html
+++ b/index.html
@@ -2,13 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pagina</h1>
-    <p>Prueba dos</p>
-    <p>prueba tres</p>
-    <div class="Hola"></div>
+
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo" >Logo</a>
+            <input type="checkbox" id="menu" />
+            <label for="menu">
+                <img src="images/menu.png" class="menu-icono" alt="">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicio</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-content container">
+            <h1>UMER clinica</h1>
+            <p>
+                Clinica UMER, bla bla bla jajaja
+            </p>
+            <a href="a"class="btn-1">Información</a>
+        </div>
+    </header> 
+
+    <section class="primersec">
+        <img src="images/bg2.png"alt="">
+        <div class="primersec-content container">
+            <h2>Esta es la primer sección bla bla blaaaaaa</h2>
+            <p class="txt-p">
+                texto de la primer sección
+            </p>
+        <div class="primersec-group">
+            <div class="primersec-1">
+                <img src="images/c1.png"
+
+            </div>
+
+        </div>
+
+
+        </div>
+
+    </section>
+
+
+    
 </body>
 </html>
