--- a/index.html
+++ b/index.html
@@ -35,24 +35,153 @@
     <section class="primersec">
         <img src="images/bg2.png"alt="">
         <div class="primersec-content container">
-            <h2>Esta es la primer sección bla bla blaaaaaa</h2>
+            <h2>Esta es la primer sección blaaa</h2>
             <p class="txt-p">
                 texto de la primer sección
             </p>
-        <div class="primersec-group">
-            <div class="primersec-1">
-                <img src="images/c1.png"
+            <div class="primersec-group">
+                <div class="primersec-1">
+                    <img src="images/c1.png" alt="">
+                    <h3>primer sección con h3</h3>
+                    <p>
+                        texto del h3
+                    </p>
+                </div>
+                <div class="primersec-1">
+                    <img src="images/c2.png" alt="">
+                    <h3>primer sección con h3</h3>
+                    <p>
+                        texto del h3
+                    </p>
+                </div>
+                <div class="primersec-1">
+                    <img src="images/c3.png" alt="">
+                    <h3>primer sección con h3</h3>
+                    <p>
+                        texto del h3
+                    </p>
+                </div>
+            </div>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+    </section>
 
+    <main class="servises">
+        <div class="servises-content container">
+            <h2>Servicios Clinica</h2>
+            <div class="services-group">
+                <div class="services-1">
+                    <img src="images/i1.svg" alt="">
+                    <h3>Servicio 1</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/i2.svg" alt="">
+                    <h3>Servicio 2</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/i3.svg" alt="">
+                    <h3>Servicio 3</h3>
+                </div>
+            </div>
+            <p>
+                Texto de los servicios bla bla
+            </p>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+    </main>
+
+    <section class="general">
+        <div class="general-1">
+            <h2>total general</h2>
+            <p>
+                Texto de lo general bla bla
+            </p>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+        <div class="general-2"></div>
+    </section>
+
+    <section class="general">
+        <div class="general-3"></div>
+        <div class="general-1">
+            <h2>total general</h2>
+            <p>
+                Texto de lo general 2 bla bla
+            </p>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+    </section>
+
+    <section class="blog container">
+        <h2>Blog</h2>
+        <p>Texto del blog</p>
+        <div class="blog-content">
+            <div class="blog-1">
+                <img src="images/blog1.jpg" alt="">
+                <h3>Blog 1</h3>
+                <p>
+                    Texto blog 1 bla bla
+                </p>
+            </div>
+            <div class="blog-1">
+                <img src="images/blog2.jpg" alt="">
+                <h3>Blog 2</h3>
+                <p>
+                    Texto blog 2 bla bla
+                </p>
+            </div>
+            <div class="blog-1">
+                <img src="images/blog3.jpg" alt="">
+                <h3>Blog 3</h3>
+                <p>
+                    Texto blog 3 bla bla
+                </p>
+            </div>
+        </div>
+        <a href="#" class="btn-1">Información</a>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
             </div>
 
         </div>
 
-
-        </div>
-
-    </section>
-
-
-    
+    </footer>    
 </body>
 </html>
