avance 20 de nov

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header> 
 
     <section class="primersec">
-        <img src="images/bg2.png"alt="">
+        <img class="primersec-img" src="images/bg2.png"alt="">
         <div class="primersec-content container">
             <h2>Esta es la primer sección blaaa</h2>
             <p class="txt-p">
