--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Promociones</a></li>
                 </ul>
             </nav>
         </div>
         <div class="header-content container">
-            <h1>UMER clinica</h1>
+            <h1>UMER</h1>
             <p>
-                Clinica UMER, bla bla bla jajaja
+                Unidad Médica Especializada de la Rosa
             </p>
-            <a href="a"class="btn-1">Información</a>
+            <a href="a"class="btn-1">Contacto</a>
         </div>
     </header> 
 
