--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="primersec">
         <img class="primersec-img" src="images/bg2.png"alt="">
         <div class="primersec-content container">
-            <h2>Esta es la primer sección blaaa</h2>
+            <h2>Nosotros</h2>
             <p class="txt-p">
                 texto de la primer sección
             </p>
