--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Promociones</a></li>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">NOSOTROS</a></li>
+                    <li><a href="#">SERVICIOS</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                    <li><a href="#">PROMOCIONES</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,11 +40,16 @@
         <div class="primersec-content container">
             <h2>Nosotros</h2>
             <p class="txt-p">
-                texto de la primer sección
+                UMER es una clínica comprometida con la salud y el bienestar de la comunidad desde su apertura en 2021. Contamos con un equipo de médicos
+                altamente capacitados que laboran tanto en hospitales públicos y privados como el IMSS, ISSSTE, y otros centros de salud, brindando atención
+                de calidad y experiencia en diversas especialidades.
+                En UMER, ofrecemos atención médica integral, disponible todos los días, para adaptarnos a las necesidades de nuestros pacientes. Nuestra misión es 
+                proporcionar un servicio cercano, confiable, y profesional, asegurando siempre un diagnóstico preciso y el mejor tratamiento.
+                !Vísitanos y experimenta la diferencia en atención médica!
             </p>
             <div class="primersec-group">
                 <div class="primersec-1">
-                    <img src="images/c1.png" alt="">
+                    <img src="images/n1.png" alt="">
                     <h3>primer sección con h3</h3>
                     <p>
                         texto del h3
