--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <p class="txt-p">
                 UMER es una clínica comprometida con la salud y el bienestar de la comunidad desde su apertura en 2021. Contamos con un equipo de médicos
                 altamente capacitados que laboran tanto en hospitales públicos y privados como el IMSS, ISSSTE, y otros centros de salud, brindando atención
-                de calidad y experiencia en diversas especialidades.
+                de calidad y experiencia en diversas especialidades.<br>
                 En UMER, ofrecemos atención médica integral, disponible todos los días, para adaptarnos a las necesidades de nuestros pacientes. Nuestra misión es 
-                proporcionar un servicio cercano, confiable, y profesional, asegurando siempre un diagnóstico preciso y el mejor tratamiento.
-                !Vísitanos y experimenta la diferencia en atención médica!
+                proporcionar un servicio cercano, confiable, y profesional, asegurando siempre un diagnóstico preciso y el mejor tratamiento.<br>
+                ¡Vísitanos y experimenta la diferencia en atención médica!
             </p>
             <div class="primersec-group">
                 <div class="primersec-1">
