--- a/index.html
+++ b/index.html
@@ -50,27 +50,14 @@
             <div class="primersec-group">
                 <div class="primersec-1">
                     <img src="images/n1.png" alt="">
-                    <h3>primer sección con h3</h3>
-                    <p>
-                        texto del h3
-                    </p>
                 </div>
                 <div class="primersec-1">
-                    <img src="images/c2.png" alt="">
-                    <h3>primer sección con h3</h3>
-                    <p>
-                        texto del h3
-                    </p>
+                    <img src="images/n3.webp" alt="">
                 </div>
                 <div class="primersec-1">
-                    <img src="images/c3.png" alt="">
-                    <h3>primer sección con h3</h3>
-                    <p>
-                        texto del h3
-                    </p>
+                    <img src="images/n2.png" alt="">
                 </div>
             </div>
-            <a href="#" class="btn-1">Información</a>
         </div>
     </section>
 
