--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="menu container">
-            <a href="#" class="logo" >Logo</a>
+            <a href="#" class="logo" > </a>
             <input type="checkbox" id="menu" />
             <label for="menu">
                 <img src="images/menu.png" class="menu-icono" alt="">
@@ -27,7 +27,7 @@
             </nav>
         </div>
         <div class="header-content container">
-            <h1>UMER</h1>
+            <h1><img src="images/n3.webp" alt=""> UMER</h1>
             <p>
                 Unidad Médica Especializada de la Rosa
             </p>
@@ -63,25 +63,41 @@
 
     <main class="servises">
         <div class="servises-content container">
-            <h2>Servicios Clinica</h2>
+            <h2>Nuestros  servicios</h2>
             <div class="services-group">
                 <div class="services-1">
-                    <img src="images/i1.svg" alt="">
-                    <h3>Servicio 1</h3>
+                    <img src="images/si1.svg" alt="">
+                    <h3>Consulta médica</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/i2.svg" alt="">
-                    <h3>Servicio 2</h3>
+                    <img src="images/si2.svg" alt="">
+                    <h3>Urgencias</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/i3.svg" alt="">
-                    <h3>Servicio 3</h3>
+                    <img src="images/si3.svg" alt="">
+                    <h3>Cirugía</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/si4.svg" alt="">
+                    <h3>Hospitalización</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/si5.svg" alt="">
+                    <h3>Maternidad</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/si6.svg" alt="">
+                    <h3>Ginecología-Obstetricia</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/si7.svg" alt="">
+                    <h3>Ortopedia</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/si8.svg" alt="">
+                    <h3>Pediatría</h3>
                 </div>
             </div>
-            <p>
-                Texto de los servicios bla bla
-            </p>
-            <a href="#" class="btn-1">Información</a>
         </div>
     </main>
 
