--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header> 
 
     <section class="primersec">
-        <img class="primersec-img" src="images/bg2.png"alt="">
+        <img class="primersec-img" src="images/nosotros1.jpg"alt="">
         <div class="primersec-content container">
             <h2>Nosotros</h2>
             <p class="txt-p">
