--- a/index.html
+++ b/index.html
@@ -107,9 +107,22 @@
             <p>
                 Texto de lo general bla bla
             </p>
-            <a href="#" class="btn-1">Información</a>
         </div>
-        <div class="general-2"></div>
+        <div class="general-2">
+            <body>
+                <gmp-map
+                  center="37.4220656,-122.0840897"
+                  zoom="10"
+                  map-id="DEMO_MAP_ID"
+                  style="height: 400px"
+                ></gmp-map>
+            
+                <script
+                  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=maps&v=beta"
+                  defer
+                ></script>
+              </body>
+        </div>
     </section>
 
     <section class="general">
