--- a/index.html
+++ b/index.html
@@ -100,8 +100,17 @@
             </div>
         </div>
     </main>
-
-    <section class="general">
+    <section class="segundasec">
+    <div class="segundasec-content container">
+        <h2>Contacto</h2>
+        <h3>Encuentanos en</h3>
+        <p>Ahueyotl, Amp. Los Reyes, Iztapalapa, 09840 Ciudad de México, CDMX <br><br>55 56701341</p>
+        <body>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.5766266804594!2d-99.1071358!3d19.3441694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fe03d9dd6d31%3A0xc9474f0bda04530e!2sClinica%20UMER%2C%20Unidad%20Medica%20Especializada%20DeLa%20Rosa!5e0!3m2!1ses!2smx!4v1737243070129!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              
+        </body>
+    </div>
+    </section>
+    <!--<section class="general">
         <div class="general-1">
             <h2>total general</h2>
             <p>
@@ -134,7 +143,7 @@
             </p>
             <a href="#" class="btn-1">Información</a>
         </div>
-    </section>
+    </section>-->
 
     <section class="blog container">
         <h2>Blog</h2>
