--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
 </head>
 <body>
 
@@ -108,6 +109,22 @@
         <body>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.5766266804594!2d-99.1071358!3d19.3441694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fe03d9dd6d31%3A0xc9474f0bda04530e!2sClinica%20UMER%2C%20Unidad%20Medica%20Especializada%20DeLa%20Rosa!5e0!3m2!1ses!2smx!4v1737243070129!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              
         </body>
+        <div class="box">
+             <div class="contenedorredsocial">
+             <div class="boton">
+                 <div h class="icono"><i class="fa-brands fa-facebook"></i></div>
+                     <span class="social"><a href="https://www.facebook.com/people/Unidad-Medica-Especializada-De-La-Rosa/100092719326695/" target="_blank">Facebook</a></span>
+             </div>
+             <div class="boton">
+                <div h class="icono"><i class="fa-solid fa-envelope"></i></div>
+                    <span class="social"><a href="mailto:unimed_delarosa@hotmail.com" target="_blank">Correo</a></span>
+             </div>
+             <div class="boton">
+                <div h class="icono"><i class="fa-brands fa-whatsapp"></i></div>
+                    <span class="social"><a href="https://api.whatsapp.com/send/?phone=525534145560&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a></span>
+             </div>
+             </div>
+        </div>
     </div>
     </section>
     <!--<section class="general">
