--- a/index.html
+++ b/index.html
@@ -104,8 +104,6 @@
     <section class="segundasec">
     <div class="segundasec-content container">
         <h2>Contacto</h2>
-        <h3>Encuentanos en</h3>
-        <p>Ahueyotl, Amp. Los Reyes, Iztapalapa, 09840 Ciudad de México, CDMX <br><br>55 56701341</p>
         <body>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.5766266804594!2d-99.1071358!3d19.3441694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fe03d9dd6d31%3A0xc9474f0bda04530e!2sClinica%20UMER%2C%20Unidad%20Medica%20Especializada%20DeLa%20Rosa!5e0!3m2!1ses!2smx!4v1737243070129!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              
         </body>
@@ -122,6 +120,10 @@
              <div class="boton">
                 <div h class="icono"><i class="fa-brands fa-whatsapp"></i></div>
                     <span class="social"><a href="https://api.whatsapp.com/send/?phone=525534145560&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a></span>
+             </div>
+             <div class="boton">
+                <div h class="icono"><i class="fa-solid fa-phone-volume"></i></div>
+                    <span class="social"><a href="tel:5556701342" target="_blank">Teléfono</a></span>
              </div>
              </div>
         </div>
