--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         <div class="box">
              <div class="contenedorredsocial">
              <div class="boton">
+                 <div h class="icono"><i class="fa-brands fa-whatsapp"></i></div>
+                     <span class="social"><a href="https://api.whatsapp.com/send/?phone=525534145560&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a></span>
+             </div>
+             <div class="boton">
                  <div h class="icono"><i class="fa-brands fa-facebook"></i></div>
                      <span class="social"><a href="https://www.facebook.com/people/Unidad-Medica-Especializada-De-La-Rosa/100092719326695/" target="_blank">Facebook</a></span>
              </div>
@@ -118,11 +122,7 @@
                     <span class="social"><a href="mailto:unimed_delarosa@hotmail.com" target="_blank">Correo</a></span>
              </div>
              <div class="boton">
-                <div h class="icono"><i class="fa-brands fa-whatsapp"></i></div>
-                    <span class="social"><a href="https://api.whatsapp.com/send/?phone=525534145560&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a></span>
-             </div>
-             <div class="boton">
-                <div h class="icono"><i class="fa-solid fa-phone-volume"></i></div>
+                <div h class="icono"><i class="fa-solid fa-phone"></i></div>
                     <span class="social"><a href="tel:5556701342" target="_blank">Teléfono</a></span>
              </div>
              </div>
