--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         </div>
     </main>
     <section class="segundasec">
+    <!--<img class="segundasec-margen" src="images/margen.jpg"alt="">
+    <img class="segundasec-margen2" src="images/margen.jpg"alt="">-->
     <div class="segundasec-content container">
         <h2>Contacto</h2>
         <body>
