--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 ¡Vísitanos y experimenta la diferencia en atención médica!
             </p>
             <div class="primersec-group">
-                <div class="primersec-1">
+                <!--<div class="primersec-1">
                     <img src="images/n1.png" alt="">
-                </div>
+                </div>-->
                 <div class="primersec-1">
                     <img src="images/n3.webp" alt="">
                 </div>
-                <div class="primersec-1">
+                <!--<div class="primersec-1">
                     <img src="images/n2.png" alt="">
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -67,43 +67,61 @@
             <h2>Nuestros  servicios</h2>
             <div class="services-group">
                 <div class="services-1">
-                    <img src="images/si1.svg" alt="">
-                    <h3>Consulta médica</h3>
+                    <img src="images/consulta.png" alt="">
+                    <h3>Consulta General</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si2.svg" alt="">
-                    <h3>Urgencias</h3>
+                    <img src="images/Ginecologa.png" alt="">
+                    <h3>Ginecóloga</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si3.svg" alt="">
+                    <img src="images/pediatria.png" alt="">
+                    <h3>Pediatría</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/medicinainterna.png" alt="">
+                    <h3>Medicina Interna</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/cirugia.png" alt="">
                     <h3>Cirugía</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si4.svg" alt="">
-                    <h3>Hospitalización</h3>
+                    <img src="images/traumatologia.png" alt="">
+                    <h3>Traumatología y Ortopedia</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si5.svg" alt="">
-                    <h3>Maternidad</h3>
+                    <img src="images/otorrinolaringologia.png" alt="">
+                    <h3>Otorrinolaringología</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si6.svg" alt="">
-                    <h3>Ginecología-Obstetricia</h3>
+                    <img src="images/cirugiaplastica.png" alt="">
+                    <h3>Cirugia plástica</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si7.svg" alt="">
-                    <h3>Ortopedia</h3>
+                    <img src="images/urologia.png" alt="">
+                    <h3>Urología</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/si8.svg" alt="">
-                    <h3>Pediatría</h3>
+                    <img src="images/gastro.png" alt="">
+                    <h3>Gastroenterologo</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/dermo.png" alt="">
+                    <h3>Dermocosmetica</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/controldepeso.png" alt="">
+                    <h3>Control de peso</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/nutricion.png" alt="">
+                    <h3>Nutrición</h3>
                 </div>
             </div>
         </div>
     </main>
     <section class="segundasec">
-    <!--<img class="segundasec-margen" src="images/margen.jpg"alt="">
-    <img class="segundasec-margen2" src="images/margen.jpg"alt="">-->
     <div class="segundasec-content container">
         <h2>Contacto</h2>
         <body>
