--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="services-1">
                     <img src="images/consulta.png" alt="">
                     <h3>Consulta General</h3>
+                    <p>$200</p>
                 </div>
                 <div class="services-1">
                     <img src="images/Ginecologa.png" alt="">
@@ -185,7 +186,7 @@
     </section>-->
 
     <section class="blog container">
-        <h2>Blog</h2>
+        <h2>PROMOCIONES</h2>
         <p>Texto del blog</p>
         <div class="blog-content">
             <div class="blog-1">
