--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="services-1">
                     <img src="images/Ginecologa.png" alt="">
-                    <h3>Ginecóloga</h3>
+                    <h3>Ginecología</h3>
                 </div>
                 <div class="services-1">
                     <img src="images/pediatria.png" alt="">
@@ -105,11 +105,11 @@
                 </div>
                 <div class="services-1">
                     <img src="images/gastro.png" alt="">
-                    <h3>Gastroenterologo</h3>
+                    <h3>Gastroenterología</h3>
                 </div>
                 <div class="services-1">
                     <img src="images/dermo.png" alt="">
-                    <h3>Dermocosmetica</h3>
+                    <h3>Dermocosmetología</h3>
                 </div>
                 <div class="services-1">
                     <img src="images/controldepeso.png" alt="">
