--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <header class="header">
+    <header class="header" id="a">
         <div class="menu container">
             <a href="#" class="logo" > </a>
             <input type="checkbox" id="menu" />
@@ -19,11 +19,11 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">NOSOTROS</a></li>
-                    <li><a href="#">SERVICIOS</a></li>
-                    <li><a href="#">CONTACTO</a></li>
-                    <li><a href="#">PROMOCIONES</a></li>
+                    <li><a href="#a" class="selected">INICIO</a></li>
+                    <li><a href="#b">NOSOTROS</a></li>
+                    <li><a href="#c">SERVICIOS</a></li>
+                    <li><a href="#d">CONTACTO</a></li>
+                    <li><a href="#e">PROMOCIONES</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,11 +32,11 @@
             <p>
                 Unidad Médica Especializada de la Rosa
             </p>
-            <a href="a"class="btn-1">Contacto</a>
+            <a href="tel:5556701342" class="btn-1">Contacto</a>
         </div>
     </header> 
 
-    <section class="primersec">
+    <section class="primersec" id="b">
         <img class="primersec-img" src="images/nosotros1.jpg"alt="">
         <div class="primersec-content container">
             <h2>Nosotros</h2>
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <main class="servises">
+    <main class="servises" id="c">
         <div class="servises-content container">
             <h2>Nuestros  servicios</h2>
             <div class="services-group">
@@ -123,7 +123,7 @@
         </div>
     </main>
     
-    <section class="segundasec">
+    <section class="segundasec" id="d">
     <div class="segundasec-content container">
         <h2>Contacto</h2>
         <body>
@@ -152,7 +152,7 @@
     </div>
     </section>
     
-    <section class="blog container">
+    <section class="blog container" id="e">
         <h2>PROMOCIONES</h2>
         <p>Texto del blog</p>
         <div class="blog-content">
