--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>
                 Unidad Médica Especializada de la Rosa
             </p>
-            <a href="tel:5556701342" class="btn-1">Contacto</a>
+            <a href="https://api.whatsapp.com/send/?phone=525534145560&text&type=phone_number&app_absent=0" class="btn-1">Contacto</a>
         </div>
     </header> 
 
