--- a/index.html
+++ b/index.html
@@ -184,42 +184,11 @@
     <footer class="footer">
         <div class="footer-content container">
             <div class="link">
-                <h3>lorem</h3>
                 <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
+                    <li><a href="https://www.google.com/maps/place/Clinica+UMER,+Unidad+Medica+Especializada+DeLa+Rosa/@19.3441694,-99.1071358,17z/data=!3m1!4b1!4m6!3m5!1s0x85d1fe03d9dd6d31:0xc9474f0bda04530e!8m2!3d19.3441694!4d-99.1071358!16s%2Fg%2F11sbwn8y_m?entry=ttu&g_ep=EgoyMDI1MDEyOS4xIKXMDSoASAFQAw%3D%3D">Amp. Los Reyes, Iztapalapa, 09840 Ciudad de México, CDMX </a></li>
+                    <img src="images/mapa.png" alt="">
                 </ul>
             </div>
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>
-            </div>
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>
-            </div>
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>
-            </div>
-
         </div>
 
     </footer>    
