--- a/index.html
+++ b/index.html
@@ -151,36 +151,20 @@
         </div>
     </div>
     </section>
-    
-    <section class="blog container" id="e">
-        <h2>PROMOCIONES</h2>
-        <p>Texto del blog</p>
+
+    <section class="blog" id="e">
+        <h2>Promociones</h2>
         <div class="blog-content">
             <div class="blog-1">
-                <img src="images/blog1.jpg" alt="">
-                <h3>Blog 1</h3>
-                <p>
-                    Texto blog 1 bla bla
-                </p>
+                <img src="images/promo1.jpeg" alt="">
+                <h3>Promoción1</h3>
             </div>
             <div class="blog-1">
-                <img src="images/blog2.jpg" alt="">
-                <h3>Blog 2</h3>
-                <p>
-                    Texto blog 2 bla bla
-                </p>
-            </div>
-            <div class="blog-1">
-                <img src="images/blog3.jpg" alt="">
-                <h3>Blog 3</h3>
-                <p>
-                    Texto blog 3 bla bla
-                </p>
+                <img src="images/promo2.jpeg" alt="">
+                <h3>Promoción2</h3>
             </div>
         </div>
-        <a href="#" class="btn-1">Información</a>
     </section>
-
     <footer class="footer">
         <div class="footer-content container">
             <div class="link">
