--- a/index.html
+++ b/index.html
@@ -40,22 +40,32 @@
         <img class="primersec-img" src="images/nosotros1.jpg"alt="">
         <div class="primersec-content container">
             <h2>Nosotros</h2>
+            <h3>Fundación</h3>
             <p class="txt-p">
-                UMER es una clínica comprometida con la salud y el bienestar de la comunidad desde su apertura en 2021. Contamos con un equipo de médicos
-                altamente capacitados que laboran tanto en hospitales públicos y privados como el IMSS, ISSSTE, y otros centros de salud, brindando atención
-                de calidad y experiencia en diversas especialidades.<br><br>
-                En UMER, ofrecemos atención médica integral, disponible todos los días, para adaptarnos a las necesidades de nuestros pacientes. Nuestra misión es 
-                proporcionar un servicio cercano, confiable, y profesional, asegurando siempre un diagnóstico preciso y el mejor tratamiento.<br><br>
-                ¡Vísitanos y experimenta la diferencia en atención médica!
+                La clínica UMER fue fundada en el año 2017 por el Dr. Saúl de la Rosa Martínez y la Dra. María Esther de la Rosa Martínez con el objetivo 
+                de crear un grupo médico de especialistas que brindara atención médica personalizada y de calidad humana.
             </p>
-            <div class="primersec-group">
-                <!--<div class="primersec-1">
+            <div class="primersec-m">
+                <img src="images/mision.png" alt="">
+                <h3>Misión</h3>
+                <p>Ofrecer servicios médicos integrales de alta calidad, centrados en las necesidades y objetivos individuales de los pacientes. 
+                   Cuenta con especialistas en diversas áreas y se compromete a proporcionar un trato digno, cálido y profesional.</p>
+            </div>
+            <div class="primersec-v">
+                <img src="images/vision.png" alt="">
+                <h3>Visión</h3>
+                <p>Buscar ser un referente en salud familiar, ofreciendo servicios médicos accesibles y de calidad a las familias. 
+                   Se enfoca en la excelencia clínica, la innovación constante y el bienestar laboral de sus colaboradores. Además, promueve la 
+                   prevención de enfermedades y hábitos saludables, con el objetivo de mejorar la salud de la población y construir una sociedad más sana.</p>
+            </div>
+            <!--<div class="primersec-group">
+                <div class="primersec-1">
                     <img src="images/n1.png" alt="">
-                </div>-->
+                </div>
                 <div class="primersec-1">
                     <img src="images/n3.webp" alt="">
                 </div>
-                <!--<div class="primersec-1">
+                <div class="primersec-1">
                     <img src="images/n2.png" alt="">
                 </div>-->
             </div>
