--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
                 de crear un grupo médico de especialistas que brindara atención médica personalizada y de calidad humana.
             </p>
             <div class="primersec-m">
-                <img src="images/mision.png" alt="">
-                <h3>Misión</h3>
+                <h3><img src="images/mision.png" alt="">  Misión</h3>
                 <p>Ofrecer servicios médicos integrales de alta calidad, centrados en las necesidades y objetivos individuales de los pacientes. 
                    Cuenta con especialistas en diversas áreas y se compromete a proporcionar un trato digno, cálido y profesional.</p>
             </div>
             <div class="primersec-v">
-                <img src="images/vision.png" alt="">
-                <h3>Visión</h3>
+                <h3><img src="images/vision.png" alt="">  Visión</h3>
                 <p>Buscar ser un referente en salud familiar, ofreciendo servicios médicos accesibles y de calidad a las familias. 
                    Se enfoca en la excelencia clínica, la innovación constante y el bienestar laboral de sus colaboradores. Además, promueve la 
                    prevención de enfermedades y hábitos saludables, con el objetivo de mejorar la salud de la población y construir una sociedad más sana.</p>
