--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2>Nosotros</h2>
             <h3>Fundación</h3>
             <p class="txt-p">
-                La clínica UMER fue fundada en el año 2017 por el Dr. Saúl de la Rosa Martínez y la Dra. María Esther de la Rosa Martínez con el objetivo 
+                La clínica UMER fue fundada en el año 2017 por el Dr. Saúl de la Rosa Martínez, con el objetivo 
                 de crear un grupo médico de especialistas que brindara atención médica personalizada y de calidad humana.
             </p>
             <div class="primersec-m">
@@ -77,7 +77,6 @@
                 <div class="services-1">
                     <img src="images/consulta.png" alt="">
                     <h3>Consulta General</h3>
-                    <p>$200</p>
                 </div>
                 <div class="services-1">
                     <img src="images/Ginecologa.png" alt="">
@@ -100,7 +99,7 @@
                     <h3>Traumatología y Ortopedia</h3>
                 </div>
                 <div class="services-1">
-                    <img src="images/otorrinolaringologia.png" alt="">
+                    <img src="images/otorrino.png" alt="">
                     <h3>Otorrinolaringología</h3>
                 </div>
                 <div class="services-1">
@@ -126,6 +125,26 @@
                 <div class="services-1">
                     <img src="images/nutricion.png" alt="">
                     <h3>Nutrición</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/neurologia.png" alt="">
+                    <h3>Neurología</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/neurocirugia.png" alt="">
+                    <h3>Neurocirugía</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/rayosx.png" alt="">
+                    <h3>Rayos X</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/laboratorio.png" alt="">
+                    <h3>Laboratorios básicos</h3>
+                </div>
+                <div class="services-1">
+                    <img src="images/farmacia.png" alt="">
+                    <h3>Farmacia</h3>
                 </div>
             </div>
         </div>
@@ -153,13 +172,21 @@
              </div>
              <div class="boton">
                 <div h class="icono"><i class="fa-solid fa-phone"></i></div>
-                    <span class="social"><a href="tel:5556701342" target="_blank">Teléfono</a></span>
+                    <span class="social"><a href="tel:5556701341" target="_blank">Teléfono</a></span>
+             </div>
+             <div class="boton">
+                <div h class="icono"><i class="fa-brands fa-instagram"></i></div>
+                    <span class="social"><a href="" target="_blank">Instagram</a></span>
+             </div>
+             <div class="boton">
+                <div h class="icono"><i class="fa-brands fa-tiktok"></i></div>
+                    <span class="social"><a href="" target="_blank">TikTok</a></span>
              </div>
              </div>
         </div>
     </div>
     </section>
-
+    
     <section class="blog" id="e">
         <h2>Promociones</h2>
         <div class="blog-content">
