--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="#c">SERVICIOS</a></li>
                     <li><a href="#d">CONTACTO</a></li>
                     <li><a href="#e">PROMOCIONES</a></li>
+                    <li><a href="#e">GALERIA</a></li>
                 </ul>
             </nav>
         </div>
@@ -200,6 +201,25 @@
             </div>
         </div>
     </section>
+
+    <section class="container" id="f">
+        <h2>Galeria</h2>
+        <div class="slider-wrapper">
+            <div class="slider">
+                <img id="slider-1" src="images/1.JPG" alt="">
+                <img id="slider-2" src="images/2.JPG" alt="">
+                <img id="slider-3" src="images/3.JPG" alt="">
+                <img id="slider-4" src="images/4.JPG" alt="">
+            </div>
+            <div class="slider-nav">
+                <a href="#slider-1"></a>
+                <a href="#slider-2"></a>
+                <a href="#slider-3"></a>
+                <a href="#slider-4"></a>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-content container">
             <div class="link">
