--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-    <section class="container" id="f">
+    <section class="containers" id="f">
         <h2>Galeria</h2>
         <div class="slider-wrapper">
             <div class="slider">
