--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@
         <div class="blog-content">
             <div class="blog-1">
                 <img src="images/promo1.jpeg" alt="">
-                <h3>Promoción1</h3>
             </div>
             <div class="blog-1">
                 <img src="images/promo2.jpeg" alt="">
-                <h3>Promoción2</h3>
+            </div>
+            <div class="blog-1">
+                <img src="images/promo3.jpeg" alt="">
             </div>
         </div>
     </section>
