--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -206,18 +208,63 @@
     <section class="containers" id="f">
         <h2>Galeria</h2>
         <div class="slider-wrapper">
+            <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
             <div class="slider">
                 <img id="slider-1" src="images/1.JPG" alt="">
                 <img id="slider-2" src="images/2.JPG" alt="">
                 <img id="slider-3" src="images/3.JPG" alt="">
                 <img id="slider-4" src="images/4.JPG" alt="">
+                <img id="slider-5" src="images/5.JPG" alt="">
+                <img id="slider-6" src="images/6.JPG" alt="">
+                <img id="slider-7" src="images/7.JPG" alt="">
+                <img id="slider-8" src="images/8.JPG" alt="">
+                <img id="slider-9" src="images/9.JPG" alt="">
+                <img id="slider-10" src="images/10.JPG" alt="">
+                <img id="slider-11" src="images/11.JPG" alt="">
+                <img id="slider-12" src="images/12.JPG" alt="">
+                <img id="slider-13" src="images/13.JPG" alt="">
+                <img id="slider-14" src="images/14.JPG" alt="">
+                <img id="slider-15" src="images/15.JPG" alt="">
+                <img id="slider-16" src="images/16.JPG" alt="">
+                <img id="slider-17" src="images/17.JPG" alt="">
+                <img id="slider-18" src="images/18.JPG" alt="">
+                <img id="slider-19" src="images/19.JPG" alt="">
+                <img id="slider-20" src="images/20.JPG" alt="">
+                <img id="slider-21" src="images/21.JPG" alt="">
+                <img id="slider-22" src="images/22.JPG" alt="">
+                <img id="slider-23" src="images/23.JPG" alt="">
+                <img id="slider-24" src="images/24.JPG" alt="">
+                <img id="slider-25" src="images/25.JPG" alt="">
+                <img id="slider-26" src="images/26.JPG" alt="">
+                <img id="slider-27" src="images/27.JPG" alt="">
+                <img id="slider-28" src="images/28.JPG" alt="">
+                <img id="slider-29" src="images/29.JPG" alt="">
+                <img id="slider-30" src="images/30.JPG" alt="">
+                <img id="slider-31" src="images/31.JPG" alt="">
+                <img id="slider-32" src="images/32.JPG" alt="">
+                <img id="slider-33" src="images/33.JPG" alt="">
+                <img id="slider-34" src="images/34.JPG" alt="">
+                <img id="slider-35" src="images/35.JPG" alt="">
+                <img id="slider-36" src="images/36.JPG" alt="">
+                <img id="slider-37" src="images/37.JPG" alt="">
+                <img id="slider-38" src="images/38.JPG" alt="">
+                <img id="slider-39" src="images/39.JPG" alt="">
+                <img id="slider-40" src="images/40.JPG" alt="">
+                <img id="slider-41" src="images/41.JPG" alt="">
+                <img id="slider-42" src="images/42.JPG" alt="">
+                <img id="slider-43" src="images/43.JPG" alt="">
+                <img id="slider-44" src="images/44.JPG" alt="">
+                <img id="slider-45" src="images/45.JPG" alt="">
+                <img id="slider-46" src="images/46.JPG" alt="">
+                <img id="slider-47" src="images/47.JPG" alt="">
+                <img id="slider-48" src="images/48.JPG" alt="">
+                <img id="slider-49" src="images/49.JPG" alt="">
+                <img id="slider-50" src="images/50.JPG" alt="">
+                <img id="slider-51" src="images/51.JPG" alt="">
+                <img id="slider-52" src="images/52.JPG" alt="">
+                <img id="slider-53" src="images/53.JPG" alt="">
             </div>
-            <div class="slider-nav">
-                <a href="#slider-1"></a>
-                <a href="#slider-2"></a>
-                <a href="#slider-3"></a>
-                <a href="#slider-4"></a>
-            </div>
+            <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
         </div>
     </section>
 
