--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#b">NOSOTROS</a></li>
                     <li><a href="#c">SERVICIOS</a></li>
                     <li><a href="#d">CONTACTO</a></li>
-                    <li><a href="#e">PROMOCIONES</a></li>
+                    <!--<li><a href="#e">PROMOCIONES</a></li>-->
                     <li><a href="#e">GALERIA</a></li>
                 </ul>
             </nav>
@@ -177,7 +177,7 @@
                 <div h class="icono"><i class="fa-solid fa-phone"></i></div>
                     <span class="social"><a href="tel:5556701341" target="_blank">Teléfono</a></span>
              </div>
-             <div class="boton">
+             <!--<div class="boton">
                 <div h class="icono"><i class="fa-brands fa-instagram"></i></div>
                     <span class="social"><a href="" target="_blank">Instagram</a></span>
              </div>
@@ -185,12 +185,12 @@
                 <div h class="icono"><i class="fa-brands fa-tiktok"></i></div>
                     <span class="social"><a href="" target="_blank">TikTok</a></span>
              </div>
-             </div>
+             </div>-->
         </div>
     </div>
     </section>
     
-    <section class="blog" id="e">
+    <!--<section class="blog" id="e">
         <h2>Promociones</h2>
         <div class="blog-content">
             <div class="blog-1">
@@ -203,7 +203,7 @@
                 <img src="images/promo3.jpeg" alt="">
             </div>
         </div>
-    </section>
+    </section>-->
 
     <section class="containers" id="f">
         <h2>Galeria</h2>
